10-07-2026 changes